<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.upmoon.alex.moongameoflife.MenuFragment">

    <TextView
        android:id="@+id/menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="48dp"
        android:textAlignment="center"
        android:text="@string/menu_text" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_text"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/start_new_game" />

    <Button
        android:id="@+id/load_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_game"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/load_local" />

    <Button
        android:id="@+id/load_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_local"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/load_online" />

    <Button
        android:id="@+id/reset_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_online"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_local" />

</RelativeLayout>
